Change all "reply" to "replyEmbed" and sort all